Bug fix: center align brand on homepage

--- a/src/_scss/_header.scss
+++ b/src/_scss/_header.scss
@@ -46,7 +46,7 @@
         $logo-size: 1.38em;
         width: $logo-size;
         height: $logo-size;
-        line-height: $logo-size;
+        line-height: $navbar-height;
         z-index: 3;
         margin: 0;
         padding: 0;
